# fate

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
fate/: diceengine.py
tests/: test_diceengine.py  test_fate.py
