[mypy]
ignore_missing_imports = true

[tool.poetry]
name = "fate"
version = "0.1.0"
description = ""
authors = ["Nils Müller <shimst3r@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
pre-commit = "^2.9.3"
pytest-subtests = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
